Modificaciones En El Menú

--- a/site/galeria.html
+++ b/site/galeria.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" type="text/css" href="css/galeria.css">
 	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-<title>Hotel La Fuente J.N.</title>
+	<title>Hotel La Fuente J.N.</title>
 </head>
 <body>
   <div>
@@ -64,54 +64,54 @@
 	  <h1>Siéntase Como En Casa En Nuestras Habitaciones.</h1>
 	</div>
 
-	<div class="w3-content w3-display-container" width="100%">
+	<div class="w3-content w3-display-container" style="width: 100%">
 	  <img class="mySlides w3-animate-top w3-animate-fading" src="img/hotel2.jpg" style="width:100%">
 	  <img class="mySlides w3-animate-left w3-animate-fading" src="img/hotel3.jpg" style="width:100%">
 	  <img class="mySlides w3-animate-right w3-animate-fading" src="img/hotel4.jpg" style="width:100%">
 	  <img class="mySlides w3-animate-top w3-animate-fading" src="img/hotel5.jpg" style="width:100%">
 	  <img class="mySlides w3-animate-left w3-animate-fading" src="img/hotel6.jpg" style="width:100%">
-	  <img class="mySlides w3-animate-right w3-animate-fading" src="img/hotel7.jpg" style="width:100%">
+	  <img class="mySlides w3-animate-right w3-animate-fading" src="img/hotel6.jpg" style="width:100%">
 	  <img class="mySlides w3-animate-top w3-animate-fading" src="img/hotel8.jpg" style="width:100%">
 
-	  <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-	  <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+	  <button class="w3-button indigo w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+	  <button class="w3-button indigo w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
 	</div>
-	<div class="habitaciones_galeria">
+	<div class="indigo habitaciones_galeria">
 		
-	  <h3>Habitaciones Dobles</h3>
+	  <h3>Habitaciones Sencillas</h3>
 		<ul class="galeria">
 		  <li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-		  <li><a href="#img2"><img src="img/photo2.jpg"></a></li>
-		  <li><a href="#img3"><img src="img/photo3.jpg"></a></li>
-		  <li><a href="#img4"><img src="img/photo4.jpg"></a></li>
+		  <li><a href="#img2"><img src="img/photo1.jpg"></a></li>
+		  <li><a href="#img3"><img src="img/photo1.jpg"></a></li>
+		  <li><a href="#img4"><img src="img/photo1.jpg"></a></li>
 		</ul>
 		<h3>Habitaciones Dobles</h3>
 		<ul class="galeria">
 			<li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img2"><img src="img/photo2.jpg"></a></li>
-			<li><a href="#img3"><img src="img/photo3.jpg"></a></li>
-			<li><a href="#img4"><img src="img/photo4.jpg"></a></li>
+			<li><a href="#img2"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img3"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img4"><img src="img/photo1.jpg"></a></li>
 		</ul>
 		<h3>Habitaciones Triples</h3>
 		<ul class="galeria">
 			<li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img2"><img src="img/photo2.jpg"></a></li>
-			<li><a href="#img3"><img src="img/photo3.jpg"></a></li>
-			<li><a href="#img4"><img src="img/photo4.jpg"></a></li>
+			<li><a href="#img2"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img3"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img4"><img src="img/photo1.jpg"></a></li>
 		</ul>
 		<h3>Habitaciones Cuádruples</h3>
 		<ul class="galeria">
 			<li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img2"><img src="img/photo2.jpg"></a></li>
-			<li><a href="#img3"><img src="img/photo3.jpg"></a></li>
-			<li><a href="#img4"><img src="img/photo4.jpg"></a></li>
+			<li><a href="#img2"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img3"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img4"><img src="img/photo1.jpg"></a></li>
 		</ul>
 		<h3>Habitaciones Familiares</h3>
 		<ul class="galeria">
 			<li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img2"><img src="img/photo2.jpg"></a></li>
-			<li><a href="#img3"><img src="img/photo3.jpg"></a></li>
-			<li><a href="#img4"><img src="img/photo4.jpg"></a></li>
+			<li><a href="#img2"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img3"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img4"><img src="img/photo1.jpg"></a></li>
 		</ul>
 	</div>
 
@@ -156,14 +156,14 @@
 		<a class="cerrar" href="#!">X</a>
 	</div>
 
-	<footer  id="pie">    
-		<div class="piedepa">
+	<footer class="indigo lighten-4" id="pie">    
+		<div class="indigo piedepa">
 		<center>
 			<table>
 				<tr class="tb_foot_f1">
-					<td>Columna1</td>
-					<td>Columna2</td>
-					<td>Columna3</td>
+					<th width="30%"></th>
+					<th width="40%"></th>
+					<th width="30%"></th>
 				</tr>
 				<tr>
 					<td>
