--- a/site/alojamiento.html
+++ b/site/alojamiento.html
@@ -10,26 +10,28 @@
 	
 	<!--Import Google Icon Font-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+	<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 	<!--Import materialize.css-->
 	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	<!-- CSS  -->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" type="text/css" href="css/galeria.css">
 	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-<title>Título De La Página</title>
+	<title>Hotel La Fuente J.N.</title>
 </head>
 <body>
 	<div>
-		<font class="tangerine_lit left">Hotel La Fuente J.N.</font>
+		<font class="tangerine_lit left white-text">Hotel La Fuente J.N.</font>
 		<nav class="indigo" role="navigation">
 			<div class="nav-wrapper container">
 				<a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a class="white-text" href="index.html">Inicio</a></li>
 					<li><a class="white-text" href="habitaciones.html">Habitaciones</a></li>
-					<li class="active"><a href="alojamiento.html">Alojamiento</a></li>
 					<li><a class="white-text" href="galeria.html">Galería</a></li>
 					<li><a class="white-text" href="restorant.html">Restaurantes</a></li>
+					<li class="active"><a href="alojamiento.html">Alojamiento</a></li>
 					<!--<li><a class="white-text" href="team.html">Equipo</a></li>-->
 					<li><a class="white-text" href="contact.html">Contacto</a></li>
 				</ul>
