--- a/site/galeria.html
+++ b/site/galeria.html
@@ -11,7 +11,7 @@
 	<!--Import Google Icon Font-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
+ 	<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 	<!--Import materialize.css-->
 	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	<!-- CSS  -->
@@ -29,9 +29,9 @@
         <ul class="right hide-on-med-and-down">
           <li><a class="white-text" href="index.html">Inicio</a></li>
           <li><a class="white-text" href="habitaciones.html">Habitaciones</a></li>
-          <li><a class="white-text" href="alojamiento.html">Alojamiento</a></li>
           <li class="active"><a href="galeria.html">Galería</a></li>
           <li><a class="white-text" href="restorant.html">Restaurantes</a></li>
+          <li><a class="white-text" href="alojamiento.html">Alojamiento</a></li>
           <!--<li><a class="white-text" href="team.html">Equipo</a></li>-->
           <li><a class="white-text" href="contact.html">Contacto</a></li>
         </ul>
@@ -80,81 +80,295 @@
 		
 	  <h3>Habitaciones Sencillas</h3>
 		<ul class="galeria">
-		  <li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-		  <li><a href="#img2"><img src="img/photo1.jpg"></a></li>
-		  <li><a href="#img3"><img src="img/photo1.jpg"></a></li>
-		  <li><a href="#img4"><img src="img/photo1.jpg"></a></li>
+		  <li><a href="#img1"><img src="habi/photo1.jpg"></a></li>
+		  <li><a href="#img2"><img src="habi/photo2.jpg"></a></li>
+		  <li><a href="#img3"><img src="habi/photo3.jpg"></a></li>
+		  <li><a href="#img4"><img src="habi/photo4.jpg"></a></li>
 		</ul>
 		<h3>Habitaciones Dobles</h3>
 		<ul class="galeria">
-			<li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img2"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img3"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img4"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img5"><img src="habi/photo5.jpg"></a></li>
+			<li><a href="#img6"><img src="habi/photo6.jpg"></a></li>
+			<li><a href="#img7"><img src="habi/photo7.jpg"></a></li>
+			<li><a href="#img8"><img src="habi/photo8.jpg"></a></li>
 		</ul>
 		<h3>Habitaciones Triples</h3>
 		<ul class="galeria">
-			<li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img2"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img3"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img4"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img9"><img src="habi/photo8.jpg"></a></li>
+			<li><a href="#img10"><img src="habi/photo10.jpg"></a></li>
+			<li><a href="#img11"><img src="habi/photo11.jpg"></a></li>
+			<li><a href="#img12"><img src="habi/photo12.jpg"></a></li>
 		</ul>
 		<h3>Habitaciones Cuádruples</h3>
 		<ul class="galeria">
-			<li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img2"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img3"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img4"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img13"><img src="habi/photo13.jpg"></a></li>
+			<li><a href="#img14"><img src="habi/photo14.jpg"></a></li>
+			<li><a href="#img15"><img src="habi/photo15.jpg"></a></li>
+			<li><a href="#img16"><img src="habi/photo16.jpg"></a></li>
 		</ul>
 		<h3>Habitaciones Familiares</h3>
 		<ul class="galeria">
-			<li><a href="#img1"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img2"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img3"><img src="img/photo1.jpg"></a></li>
-			<li><a href="#img4"><img src="img/photo1.jpg"></a></li>
+			<li><a href="#img17"><img src="habi/photo17.jpg"></a></li>
+			<li><a href="#img18"><img src="habi/photo18.jpg"></a></li>
+			<li><a href="#img19"><img src="habi/photo19.jpg"></a></li>
+			<li><a href="#img20"><img src="habi/photo20.jpg"></a></li>
 		</ul>
 	</div>
 
 	<div class="modal" id="img1">
-		<h3>Hermosas Habitaciones Para 3 Personas</h3>
+		<h3>Hermosas Habitaciones Sencillas</h3>
 		<div class="imagen">
 			<a href="#img4">&#60;</a>
-			<a href="#img2"><img src="img/photo1.jpg"></a>
+			<a href="#img2"><img src="habi/photo1.jpg"></a>
 			<a href="#img2">></a>
 		</div>
-		<h1>hola</h1>
+		<h1>Mensaje De La Habitación</h1>
 		<a class="cerrar" href="#!">X</a>
 	</div>
 	
 	<div class="modal" id="img2">
-		<h3>Paisaje 2</h3>
+		<h3>Habitación Sencilla</h3>
 		<div class="imagen">
 			<a href="#img1">&#60;</a>
-			<a href="#img3"><img src="img/photo2.jpg"></a>
+			<a href="#img3"><img src="habi/photo2.jpg"></a>
 			<a href="#img3">></a>
 		</div>
+		<h1>Mensaje De La Habitación</h1>
 		<a class="cerrar" href="#!">X</a>
 	</div>
 	
 	<div class="modal" id="img3">
-		<h3>Paisaje 3</h3>
+		<h3>Habitación Sencilla</h3>
 		<div class="imagen">
 			<a href="#img2">&#60;</a>
-			<a href="#img4"><img src="img/photo3.jpg"></a>
+			<a href="#img4"><img src="habi/photo3.jpg"></a>
 			<a href="#img4">></a>
 		</div>
+		<h1>Mensaje De La Habitación</h1>
 		<a class="cerrar" href="#!">X</a>
 	</div>
 	
 	<div class="modal" id="img4">
-		<h3>Paisaje 4</h3>
+		<h3>Habitación Sencilla</h3>
 		<div class="imagen">
 			<a href="#img3">&#60;</a>
-			<a href="#img1"><img src="img/photo4.jpg"></a>
+			<a href="#img1"><img src="habi/photo4.jpg"></a>
 			<a href="#img1">></a>
 		</div>
+		<h1>Mensaje De La Habitación</h1>
 		<a class="cerrar" href="#!">X</a>
 	</div>
+
+
+
+
+	<div class="modal" id="img5">
+		<h3>Hermosas Habitaciones Dobles</h3>
+		<div class="imagen">
+			<a href="#img8">&#60;</a>
+			<a href="#img6"><img src="habi/photo5.jpg"></a>
+			<a href="#img6">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+	
+	<div class="modal" id="img6">
+		<h3>Habitación Doble</h3>
+		<div class="imagen">
+			<a href="#img5">&#60;</a>
+			<a href="#img7"><img src="habi/photo6.jpg"></a>
+			<a href="#img7">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+	
+	<div class="modal" id="img7">
+		<h3>Habitación Doble</h3>
+		<div class="imagen">
+			<a href="#img6">&#60;</a>
+			<a href="#img8"><img src="habi/photo7.jpg"></a>
+			<a href="#img8">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+	
+	<div class="modal" id="img8">
+		<h3>Habitación Doble</h3>
+		<div class="imagen">
+			<a href="#img7">&#60;</a>
+			<a href="#img5"><img src="habi/photo8.jpg"></a>
+			<a href="#img5">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+
+	
+	<div class="modal" id="img9">
+		<h3>Hermosas Habitaciones Triples</h3>
+		<div class="imagen">
+			<a href="#img12">&#60;</a>
+			<a href="#img10"><img src="habi/photo9.jpg"></a>
+			<a href="#img10">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+	
+	<div class="modal" id="img10">
+		<h3>Habitación Triple</h3>
+		<div class="imagen">
+			<a href="#img9">&#60;</a>
+			<a href="#img11"><img src="habi/photo10.jpg"></a>
+			<a href="#img11">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+	<div class="modal" id="img11">
+		<h3>Habitación Triple</h3>
+		<div class="imagen">
+			<a href="#img10">&#60;</a>
+			<a href="#img12"><img src="habi/photo11.jpg"></a>
+			<a href="#img12">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+	<div class="modal" id="img12">
+		<h3>Habitación Triple</h3>
+		<div class="imagen">
+			<a href="#img11">&#60;</a>
+			<a href="#img9"><img src="habi/photo12.jpg"></a>
+			<a href="#img9">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+
+
+	<div class="modal" id="img13">
+		<h3>Hermosas Habitaciones Cuádruples</h3>
+		<div class="imagen">
+			<a href="#img16">&#60;</a>
+			<a href="#img14"><img src="habi/photo13.jpg"></a>
+			<a href="#img12">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+	<div class="modal" id="img14">
+		<h3>Habitación Cuádruple</h3>
+		<div class="imagen">
+			<a href="#img13">&#60;</a>
+			<a href="#img15"><img src="habi/photo14.jpg"></a>
+			<a href="#img15">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+	<div class="modal" id="img15">
+		<h3>Habitación Cuádruple</h3>
+		<div class="imagen">
+			<a href="#img14">&#60;</a>
+			<a href="#img16"><img src="habi/photo15.jpg"></a>
+			<a href="#img16">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+	<div class="modal" id="img16">
+		<h3>Habitación Cuádruple</h3>
+		<div class="imagen">
+			<a href="#img15">&#60;</a>
+			<a href="#img13"><img src="habi/photo16.jpg"></a>
+			<a href="#img13">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+
+
+	<div class="modal" id="img17">
+		<h3>Hermosas Habitaciones Familiares</h3>
+		<div class="imagen">
+			<a href="#img20">&#60;</a>
+			<a href="#img18"><img src="habi/photo17.jpg"></a>
+			<a href="#img18">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+	<div class="modal" id="img18">
+		<h3>Habitación Familiar</h3>
+		<div class="imagen">
+			<a href="#img17">&#60;</a>
+			<a href="#img19"><img src="habi/photo18.jpg"></a>
+			<a href="#img19">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+	<div class="modal" id="img19">
+		<h3>Habitación Familiar</h3>
+		<div class="imagen">
+			<a href="#img18">&#60;</a>
+			<a href="#img20"><img src="habi/photo19.jpg"></a>
+			<a href="#img20">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+	<div class="modal" id="img20">
+		<h3>Habitación Familiar</h3>
+		<div class="imagen">
+			<a href="#img19">&#60;</a>
+			<a href="#img17"><img src="habi/photo20.jpg"></a>
+			<a href="#img17">></a>
+		</div>
+		<h1>Mensaje De La Habitación</h1>
+		<a class="cerrar" href="#!">X</a>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 	<footer class="indigo lighten-4" id="pie">    
 		<div class="indigo piedepa">
