--- a/site/galeria.html
+++ b/site/galeria.html
@@ -60,7 +60,7 @@
       <li><a class="waves-effect blue" href="contacto.html"><i class="material-icons">contact_mail</i></a></li>
     </ul>
   </div>
-	<div class="titulo1">
+	<div class="indigo lighten-2 titulo1">
 	  <h1>Siéntase Como En Casa En Nuestras Habitaciones.</h1>
 	</div>
 
@@ -77,42 +77,55 @@
 	  <button class="w3-button indigo w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
 	</div>
 	<div class="indigo habitaciones_galeria">
-		
-	  <h3>Habitaciones Sencillas</h3>
-		<ul class="galeria">
-		  <li><a href="#img1"><img src="habi/photo1.jpg"></a></li>
-		  <li><a href="#img2"><img src="habi/photo2.jpg"></a></li>
-		  <li><a href="#img3"><img src="habi/photo3.jpg"></a></li>
-		  <li><a href="#img4"><img src="habi/photo4.jpg"></a></li>
-		</ul>
-		<h3>Habitaciones Dobles</h3>
-		<ul class="galeria">
-			<li><a href="#img5"><img src="habi/photo5.jpg"></a></li>
-			<li><a href="#img6"><img src="habi/photo6.jpg"></a></li>
-			<li><a href="#img7"><img src="habi/photo7.jpg"></a></li>
-			<li><a href="#img8"><img src="habi/photo8.jpg"></a></li>
-		</ul>
-		<h3>Habitaciones Triples</h3>
-		<ul class="galeria">
-			<li><a href="#img9"><img src="habi/photo8.jpg"></a></li>
-			<li><a href="#img10"><img src="habi/photo10.jpg"></a></li>
-			<li><a href="#img11"><img src="habi/photo11.jpg"></a></li>
-			<li><a href="#img12"><img src="habi/photo12.jpg"></a></li>
-		</ul>
-		<h3>Habitaciones Cuádruples</h3>
-		<ul class="galeria">
-			<li><a href="#img13"><img src="habi/photo13.jpg"></a></li>
-			<li><a href="#img14"><img src="habi/photo14.jpg"></a></li>
-			<li><a href="#img15"><img src="habi/photo15.jpg"></a></li>
-			<li><a href="#img16"><img src="habi/photo16.jpg"></a></li>
-		</ul>
-		<h3>Habitaciones Familiares</h3>
-		<ul class="galeria">
-			<li><a href="#img17"><img src="habi/photo17.jpg"></a></li>
-			<li><a href="#img18"><img src="habi/photo18.jpg"></a></li>
-			<li><a href="#img19"><img src="habi/photo19.jpg"></a></li>
-			<li><a href="#img20"><img src="habi/photo20.jpg"></a></li>
-		</ul>
+		<div class="habitaciones indigo lighten-1">
+			<h3>Habitaciones Sencillas</h3>
+			<ul class="galeria">
+			  <li><a href="#img1"><img src="habi/photo1.jpg"></a></li>
+			  <li><a href="#img2"><img src="habi/photo2.jpg"></a></li>
+			  <li><a href="#img3"><img src="habi/photo3.jpg"></a></li>
+			  <li><a href="#img4"><img src="habi/photo4.jpg"></a></li>
+			</ul>	
+		</div>
+	  
+	  <div class="habitaciones indigo lighten-2">
+			<h3>Habitaciones Dobles</h3>
+			<ul class="galeria">
+				<li><a href="#img5"><img src="habi/photo5.jpg"></a></li>
+				<li><a href="#img6"><img src="habi/photo6.jpg"></a></li>
+				<li><a href="#img7"><img src="habi/photo7.jpg"></a></li>
+				<li><a href="#img8"><img src="habi/photo8.jpg"></a></li>
+			</ul>
+		</div>
+
+		<div class="habitaciones indigo lighten-3">
+			<h3>Habitaciones Triples</h3>
+			<ul class="galeria">
+				<li><a href="#img9"><img src="habi/photo8.jpg"></a></li>
+				<li><a href="#img10"><img src="habi/photo10.jpg"></a></li>
+				<li><a href="#img11"><img src="habi/photo11.jpg"></a></li>
+				<li><a href="#img12"><img src="habi/photo12.jpg"></a></li>
+			</ul>
+		</div>
+
+		<div class="habitaciones indigo lighten-4">
+			<h3>Habitaciones Cuádruples</h3>
+			<ul class="galeria">
+				<li><a href="#img13"><img src="habi/photo13.jpg"></a></li>
+				<li><a href="#img14"><img src="habi/photo14.jpg"></a></li>
+				<li><a href="#img15"><img src="habi/photo15.jpg"></a></li>
+				<li><a href="#img16"><img src="habi/photo16.jpg"></a></li>
+			</ul>
+		</div>
+
+		<div class="habitaciones indigo lighten-5">
+			<h3>Habitaciones Familiares</h3>
+			<ul class="galeria">
+				<li><a href="#img17"><img src="habi/photo17.jpg"></a></li>
+				<li><a href="#img18"><img src="habi/photo18.jpg"></a></li>
+				<li><a href="#img19"><img src="habi/photo19.jpg"></a></li>
+				<li><a href="#img20"><img src="habi/photo20.jpg"></a></li>
+			</ul>
+			</div>
 	</div>
 
 	<div class="modal" id="img1">
